--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8081
+server.port=8081
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
@@ -9,4 +9,3 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 #
 spring.data.mongodb.database=Customers
-spring.batch.job.enabled=false
